Added doc for academic calendar
